# qwen2.5-varlen-npu

./: .gitignore  SUMMARY.md  __init__.py  attention.py  export_air.py  fusion_ops.py  prepare_air_inputs.py  profiling.py  run_infer.py  varlen_utils.py
atb/: CMakeLists.txt  bench_latency.cpp  bench_throughput.cpp  build.sh  main.cpp  run.sh
atb/models/qwen2.5-0.5b/: config  run.sh
atb/models/qwen2.5-0.5b/docs/: bench_throughput_arch.md  latency_benchmark.md  throughput_benchmark.md
atb/tools/: bench_throughput.py  compare.py  fa_golden.py  generate_config.py  parse_dump.py  parse_profiling.py  read_data.py  run_onnx_model.py  test_fa.py
qwen_varlen/: __init__.py  fusion_ops.py  prepare_air_inputs.py  varlen_utils.py
